// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Button Choice Rendering Should render with multiple prop 1`] = `
<yoo-form-button-choice
  class="hydrated"
  data-yoo-form-button-choice-host=""
  multiple="true"
>
  
  <div
    class="outer-container"
    data-yoo-form-button-choice=""
  >
    <div
      class="grid-container few-items"
      data-yoo-form-button-choice=""
    />
  </div>
</yoo-form-button-choice>
`;

exports[`Form Button Choice Rendering Should render with values 1`] = `
<yoo-form-button-choice
  class="hydrated"
  data-yoo-form-button-choice-host=""
>
  
  <div
    class="outer-container"
    data-yoo-form-button-choice=""
  >
    <div
      class="grid-container"
      data-yoo-form-button-choice=""
    >
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          az
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          oz
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          salut
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          bonjour
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          hi
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          max
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          min
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          chocolat
        </span>
      </div>
    </div>
  </div>
</yoo-form-button-choice>
`;

exports[`Form Button Choice Rendering With selected elements Should render with a pre selected element 1`] = `
<yoo-form-button-choice
  class="hydrated"
  data-yoo-form-button-choice-host=""
>
  
  <div
    class="outer-container"
    data-yoo-form-button-choice=""
  >
    <div
      class="grid-container"
      data-yoo-form-button-choice=""
    >
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          az
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          oz
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          salut
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          bonjour
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          saluttt
        </span>
      </div>
    </div>
  </div>
</yoo-form-button-choice>
`;

exports[`Form Button Choice Rendering With selected elements Should render with pre selected element in multiple choice 1`] = `
<yoo-form-button-choice
  class="hydrated"
  data-yoo-form-button-choice-host=""
  multiple="true"
>
  
  <div
    class="outer-container"
    data-yoo-form-button-choice=""
  >
    <div
      class="grid-container"
      data-yoo-form-button-choice=""
    >
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          az
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          oz
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          salut
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          bonjour
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          saluttt
        </span>
      </div>
    </div>
  </div>
</yoo-form-button-choice>
`;

exports[`Form Button Choice Rendering With selected elements Should render with to much selected elements and unselect them all 1`] = `
<yoo-form-button-choice
  class="hydrated"
  data-yoo-form-button-choice-host=""
>
  
  <div
    class="outer-container"
    data-yoo-form-button-choice=""
  >
    <div
      class="grid-container"
      data-yoo-form-button-choice=""
    >
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          az
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          oz
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          salut
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          bonjour
        </span>
      </div>
      <div
        class="choice-container"
        data-yoo-form-button-choice=""
      >
        <span
          data-yoo-form-button-choice=""
        >
          saluttt
        </span>
      </div>
    </div>
  </div>
</yoo-form-button-choice>
`;
